--- a/index.html
+++ b/index.html
@@ -31,10 +31,23 @@
 </section>
 
 <section id="bio">
+    <h2>Biography</h2>
+    <li>Hey everyone! Welcome to my newly created website.
+        I am new to web development, so I'm still trying out formatting features.</li>
+    <li>I've listed some of my hobbies below.</li>
+    <li>Fun fact: I've attended the Lollapalooza music festival in Chicago for two years in a row.
+    <link rel="stylesheet" href="https://www.lollapalooza.com/"alt:Lollapalooza> </li>
 <div>
 
-<p>I am a history major at RVCC.</p>
-<p>Web development is a new subject for me.</p>
+<section id="Hobbies">
+<h2>Hobbies</h2>
+<ul> <div id="li">
+<li>Fishing</li>
+<li>Travel</li>
+<li>Basketball</li>
+<li>Environment <link rel="stylesheet" href="https://www.facebook.com/ERTHCleanupCommunity"></li>
+</ul>
+
 </div>
 
 
