Added List Font

--- a/index.html
+++ b/index.html
@@ -49,8 +49,16 @@
 </ul>
 
 </div>
+<section>
 
+</section id = "gallery">
+<h2>Photo Gallery</h2>
+<hr>
 
+<figure>
+<img src="img/lake-view-640w.jpg" alt="view of Yankee Lake">
+<figcaption>View at Yankee Lake, New York</figcaption>
+</figure>
 </section>
 </main>
 
