--- a/index.html
+++ b/index.html
@@ -62,6 +62,23 @@
 </section>
 </main>
 
+<figure>
+    <img src="Mushroom-640w.jpg" alt="Mushroom">
+    <figcaption>Mushrooms after the rain</figcaption>
+    </figure>
+    </section>
+    </main>
+
+    <figure>
+        <img src="Oreo-Head-640w.jpg" alt="Cat">
+        <figcaption>My cat's head</figcaption>
+        </figure>
+        </section>
+        </main>
+
+
+
+
 <footer>©2022-Eric Booth</footer>
 
 
