Added caption style

--- a/index.html
+++ b/index.html
@@ -51,26 +51,28 @@
 </div>
 <section>
 
+
 </section id = "gallery">
 <h2>Photo Gallery</h2>
 <hr>
 
 <figure>
 <img src="img/lake-view-640w.jpg" alt="view of Yankee Lake">
-<figcaption>View at Yankee Lake, New York</figcaption>
+
+<figcaption>View at Yankee Lake, New York</figcaption> 
 </figure>
 </section>
 </main>
 
 <figure>
-    <img src="Mushroom-640w.jpg" alt="Mushroom">
+    <img src="img/Mushroom-640w.jpg" alt="Mushroom">
     <figcaption>Mushrooms after the rain</figcaption>
     </figure>
     </section>
     </main>
 
     <figure>
-        <img src="Oreo-Head-640w.jpg" alt="Cat">
+        <img src="img/Oreo-Head-640w.jpg" alt="Cat">
         <figcaption>My cat's head</figcaption>
         </figure>
         </section>
