--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <li>Fishing</li>
 <li>Travel</li>
 <li>Basketball</li>
-<li>Environment <link rel="stylesheet" href="https://www.facebook.com/ERTHCleanupCommunity"></li>
+<li>Environmental Conservation</li>
 </ul>
 
 </div>
