--- a/index.html
+++ b/index.html
@@ -21,23 +21,25 @@
 </header>
  
 <main>
-<section id="hero">
+    <div>   <section id="hero">
                 <img src="avatar.png" alt="Eric Avatar">
-                <div>
                 <p>Eric Booth</p>
-                <p>Hillsborough, NJ</p>
+               <p>Hillsborough, NJ</p> 
                 </div>
 </section>
 
 <section id="bio">
     <h2>Biography</h2>
-    <li>Hey everyone! Welcome to my newly created website.
-        I am new to web development, so I'm still trying out formatting features.</li>
+    <li>Hey everyone! Welcome to my newly created website.</li>
+    <li>I am new to web development am trying out some design features.</li>
     <li>I've listed some of my hobbies below.</li>
-    <li>Fun fact: I've attended the Lollapalooza music festival in Chicago for two years in a row.
-    <link rel="stylesheet" href="https://www.lollapalooza.com/"alt:Lollapalooza> </li>
+    <li>Fun fact: I've attended the Lollapalooza music festival in Chicago for two years in a row. Check it out here:
+        <a href="https://www.lollapalooza.com/">Lollapalooza!</a>
+    </li>
+    
 <div>
 
+    <div>
 <section id="Hobbies">
 <h2>Hobbies</h2>
 <ul> <div id="li">
@@ -45,15 +47,17 @@
 <li>Travel</li>
 <li>Basketball</li>
 <li>Environment </ul>
-
-</div>
+</li>
 <section>
+</div>
 
 
+<div>
 </section id = "gallery">
-<h2>Photo Gallery</h2>
+<h2>Photo Gallery - Mushrooms</h2>
 <hr>
-<p>Not a mushroom fan, but our yard is full of them after this rainy weather. So, I present, mushrooms in the yard.</p>
+<p2>Not a mushroom fan, but our yard is full of them after this rainy weather. So, I present, mushrooms.</p2>
+
 <figure>
     <img src="img/Mushroom-640w.jpg" alt="Mushroom">
     <figcaption>This one is about 8 inches tall.</figcaption>
@@ -85,6 +89,7 @@
             </section>
             </main>
 
+        </div>
 
 <footer>©2022-Eric Booth</footer>
 
