Modified Dorian Gray Text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <li>Fishing</li>
 <li>Travel</li>
 <li>Basketball</li>
-<li>Environment </ul>
+<li>Environmental Activism </ul>
 </li>
 </section>
 </div>
@@ -104,11 +104,14 @@
 
         <p>"Where I heard the name of Dorian Gray."</p>
 
-      
+              </article>
+        <figure>
+            <section id = "lit">
+            <img src="img/Mushroom-640w.jpg" alt="Mushroom">
+            <figcaption>This one is about 6 inches tall.</figcaption>
+            </figure>
 
 
-
-        </article>
     </div>
 
         </main>
