--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <section id="bio">
     <h2>Biography</h2>
-    <li>Hey everyone! Welcome to my newly created website.</li>
+    Hey everyone! Welcome to my newly created website.
     <li>I am new to web development am trying out some design features.</li>
     <li>I've listed some of my hobbies below.</li>
     <li>Fun fact: I've attended the Lollapalooza music festival in Chicago for two years in a row. Check it out here:
@@ -42,7 +42,8 @@
     <div>
 <section id="hobbies">
 <h2>Hobbies</h2>
-<ul> <div id="li">
+<ul> <div id="li"></div>
+  
 <li>Fishing</li>
 <li>Travel</li>
 <li>Basketball</li>
