Update Title and Style

--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
 </header>
  
 <main>
-    <div>   <section id="hero">
-                <img src="avatar.png" alt="Eric Avatar">
-                <p>Eric Booth</p>
-               <p>Hillsborough, NJ</p> 
-                </div>
+    <div>   
+        
+<section id="hero">
+    
+    <img src="avatar.png" alt="Eric Avatar">
+    <p>Eric Booth</p>
+    <p>Hillsborough, NJ</p> 
+    </div>
 </section>
 
 <section id="bio">
