Media screen and drop cap

--- a/index.html
+++ b/index.html
@@ -76,11 +76,13 @@
     <figure> 
     <img src="img/Mushroom-2-640w.jpg" alt="White Mushroom>">
     <figcaption> Small, but just about perfect.</figcaption> 
+    </figure>
    
     <hr>
     <figure> 
     <img src="img/Mushroom-3-640w.jpg" alt="Flat Mushroom>">
     <figcaption>Flat top.</figcaption> 
+     </figure>
      
     <hr>
     <figure> 
@@ -107,10 +109,7 @@
         <p>"Where I heard the name of Dorian Gray."</p>
         <br>
               </article>
-       
-
-
-    </div>
+        </div>
 
         </main>
 <footer>©2022-Eric Booth</footer>
