--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     
         <section id = "newbox"> <h2>Photo Gallery - Mushrooms</h2>
-            <p2> Not necessarily a mushroom fan, but our yard is full of them after this rainy weather. So, I present, mushrooms.</p2>     
+            <p2> I am not necessarily a mushroom fan, but our yard is full of them after this rainy weather. So, I present, mushrooms.</p2>     
         </section>
     </hr>
 
