--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 <section id="bio">
     <h2>Biography</h2> 
     <section>
-    Hey everyone! Welcome to my newly created website. </li>
-    I am new to web development am trying out some design features.</li>
-    I've listed some of my hobbies below.</li>
+    Hey everyone! Welcome to my newly created website. 
+    I am new to web development am trying out some design features.
+    I've listed some of my hobbies below.
     <br>
     Fun fact: I've attended the Lollapalooza music festival in Chicago for two years in a row. Check it out here:
             <a href="https://www.lollapalooza.com/">Lollapalooza!</a>
@@ -47,7 +47,6 @@
     
 <section id ="hobbies">
 <h2>Hobbies</h2> 
-
 <ul>
 <li>Fishing &#128031 </li>
 <li>Travel &#9992</li>
@@ -61,7 +60,8 @@
 
     
         <section id = "newbox"> <h2>Photo Gallery - Mushrooms</h2>
-            <p2> I am not necessarily a mushroom fan, but our yard is full of them after this rainy weather. So, I present, mushrooms.</p2>     
+            <p2> I am not necessarily a mushroom fan, but our yard is full of them after this rainy weather.
+                <br>So, I present, mushrooms.</p2>     
         </section>
     </hr>
 
