--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
 </div>
  
 <div>
+    <a href="http://www.red.com" target="iframe">Red.com</a>
+</div>
+    This is iframe content
+<iframe src="iframe"  
+height="600"  width="800"
+name="iframe">
+    
+</iframe>
+</div>
+<div>
 <section id ="hobbies">
 <h2>&#10043 Hobbies &#10043</h2> 
 <ul>
