--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
 </div>
  
 <div>
-    <a href="http://www.red.com" target="iframe">Red.com</a>
-</div>
-    This is iframe content
-<iframe src="iframe"  
-height="600"  width="800"
-name="iframe">
-    
+    <section id="video">
+
+    <h3>Here is a short 30-sec video of deer in the yard.</h3>
+ <iframe id="myvideo" width="300" height="300"
+src="https://www.youtube.com/embed/BWRV81KcDFM" title="Deer In The Yard - Hillsborough NJ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>;
 </iframe>
 </div>
+
 <div>
 <section id ="hobbies">
 <h2>&#10043 Hobbies &#10043</h2> 
