Complete Contact Form for Netflify

--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@ src="https://www.youtube.com/embed/BWRV81KcDFM" title="Deer In The Yard - Hillsb
 <section id="contact">
         <h2>Contact Us:</h2>
 
-        <form id="contactform" name="contactform" action="post"
-        data-netlify="true">
+        <form id="contactform" name="contactform" method="post" data-netlify="true">
 
     <fieldset>
         <legend>Contact Form</legend>
