--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
     <div class="navbar-links">
         <ul>
-           <li><a href="bio">Bio</a></li>
-           <li><a href="gallery">Gallery</a></li>
-           <li><a href="lit">Blog</a></li>      
-           <li><a href="contact">Contact Me</a></li>
+           <li><a href="#bio">Bio</a></li>
+           <li><a href="#gallery">Gallery</a></li>
+           <li><a href="#lit">Blog</a></li>      
+           <li><a href="#contact">Contact Me</a></li>
         </ul>
     </div>
 </nav>
