--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <section id="bio">
     <h2>&#10043 About Me &#10043</h2> 
     <section>
-    Hey everyone! Welcome to my newly created website. 
+    Hey everyone! Welcome to my website. 
     I am new to web development am trying out some design features.
     I've listed some of my hobbies below.
     <br>
