--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <div>
 <section id="bio">
-    <h2>&#10043 About Me &#10043</h2> 
+    <h2>About Me </h2> 
     <section>
     Hey everyone! Welcome to my website. 
     I am new to web development am trying out some design features.
@@ -77,7 +77,7 @@ src="https://www.youtube.com/embed/BWRV81KcDFM" title="Deer In The Yard - Hillsb
 
 <div>
 <section id ="hobbies">
-<h2>&#10043 Hobbies &#10043</h2> 
+<h2>Hobbies</h2> 
 <ul>
 <li>Travel &#9992</li> 
 <li>Fishing &#128031 </li>
