--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
     Hey everyone! Welcome to my website. 
     I am new to web development am trying out some design features.
     I've listed some of my hobbies below.Fun fact: I've attended the Lollapalooza music festival in Chicago for two years in a row. 
-    <br>Check it out here:
-            <a href="https://www.lollapalooza.com/">Lollapalooza!</a>
+    Check it out here:  <a href="https://www.lollapalooza.com/">Lollapalooza!</a>
     </li>
 </section>
 </div>
