--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <nav class="navbar">
     <div class="logo">
-        <img src="logo-gd00c244b0_1280.png" alt="Blue bird logo">
+        <img src="c:\Users\3boot\Desktop\RVCC\AAA IDMX\About Me\img\logo-gd00c244b0_1280.png" alt="Blue bird logo">
         <h1>Hello World, I'm Eric Booth</h1>
     </div>
 
@@ -48,7 +48,7 @@
   
 <section id="hero">
    
-    <img src="avatar.png" alt="Eric Avatar">
+    <img src="c:\Users\3boot\Desktop\RVCC\AAA IDMX\About Me\img\avatar.png" alt="Eric Avatar">
     <p>Eric Booth</p>
     <p>Hillsborough, NJ</p> 
 
