--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ src="https://www.youtube.com/embed/BWRV81KcDFM" title="Deer In The Yard - Hillsb
                 <li>
                     <input type="radio" id="message-yes"
                     name="reply" value="Yes, a reply please.">
-                    <label for="message-yes">Yes a reply would be nice.</label>
+                    <label for="message-yes">Yes, a reply would be nice.</label>
                 </li>
 
                 <li>
