--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   
 <section id="hero">
    
-    <img src="c:\Users\3boot\Desktop\RVCC\AAA IDMX\About Me\img\avatar.png" alt="Eric Avatar">
+    <img src="c:\Users\3boot\Desktop\RVCC\AAA IDMX\About Me\Logo with.png" alt="Booth Logo">
     <p>Eric Booth</p>
     <p>Hillsborough, NJ</p> 
 
