--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
 <div>
     <section id="video">
 
-    <h3>Here is a short 30-sec video of deer in the yard.</h3>
- <iframe id="myvideo" width="300" height="300"
+    <h3><span title="According to  NJ Deer Control, it is estimated that there are over 125,000 white-tailed deer in NJ, 
+        compared to one hundred years ago when there was practically no deer at all.">Here is a short 30-sec video of deer in the yard. </span> </h3>
+
+       
+    <iframe id="myvideo" width="300" height="300"
 src="https://www.youtube.com/embed/BWRV81KcDFM" title="Deer In The Yard - Hillsborough NJ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>;
 </iframe>
 </div>
